--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,7 @@
 {
   "lock": false,
   "name": "@preact-icons/im",
+  "license": "CC BY 4.0 License",
   "version": "1.0.12",
   "exports": {
     ".": "./mod.ts",
